<resources>
    <string name="app_name">ApniGari</string>
    <string name="login">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="find_rider">FIND RIDER</string>
     <string name="log_in">Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="current_location">Current Location</string>
    <string name="where_to">Where to?</string>
    <string name="second_drop_off">Second Drop off</string>
    <string name="hello">Hello !</string>
    <string name="golden_bridge_gate">Golden Bridge Gate</string>
    <string name="golden_bridge_gate_edison_avenew_609_wall_street_london">Golden Bridge Gate, Edison avenew, 609 Wall Street London...</string>
    <string name="car_image">Car Image</string>
    <string name="dummy_amount">Rs 500</string>
    <string name="rapid_go">Rapid Go</string>
    <string name="cash">Cash</string>
    <string name="we_found_you_a_driver">We found you a driver</string>
    <string name="picking_in_time_placeholder">Driver will pick you in 5:36min</string>
    <string name="name_placeholder">Hannah L Dennis</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="car_name_placeholder">Honda Civic</string>
    <string name="car_no_placeholder">RIL-5875</string>
    <string name="are_you_sure_you_want_to_cancel">are you sure you want to cancel?</string>
    <string name="you_will_be_charged_an_additional_rs_200_cancellation_fee_on_your_next_ride">You will be charged an additional rs 200 cancellation fee on your next ride</string>
    <string name="go_back">go back</string>
    <string name="cancel_trip">cancel trip</string>
    <string name="amount_placeholder">RS-5000.0</string>
    <string name="balance">Balance</string>
    <string name="date">15-6-2021</string>
    <string name="rit_5875_honda_civic">RIT-5875 Honda Civic</string>
    <string name="time">04:30 PM</string>
    <string name="rs_placeholder">RS -265</string>
    <string name="ril_5875">RIL-5875</string>
    <string name="honda_civic">Honda Civic</string>
    <string name="how_is_your_trip">how is your trip</string>
    <string name="feedback">Your feedback will help us improve driving experience</string>
    <string name="submit_review">submit review</string>
    <string name="additional_comments">Additional comments</string>
    <string name="closeicon">closeIcon</string>
    <string name="rating">Rating</string>
    <string name="cancelled">Cancelled</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="pick_up_address">Pick Up Address</string>
    <string name="first_drop_off_address">First Drop Off Address</string>
    <string name="destination_address">Destination Address</string>
    <string name="hi_i_am_dainel">Hi I am Dainel</string>
    <string name="arrow">arrow</string>
    <string name="title_activity_messages">Messages</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="type_here">Type Here</string>
    <string name="send_message_icon">Send Message Icon</string>
    <string name="go">Go</string>
    <string name="go_plus">Go Plus</string>
    <string name="business">Business</string>
    <string name="book_a_car">Book a car</string>
    <string name="dotted_line">dotted line</string>
    <string name="add_icon">add icon</string>
    <string name="alto_vx">Alto VX</string>
    <string name="price">Rs 2000</string>
    <string name="full_name">Full Name</string>
    <string name="price_placeholder">Price</string>
    <string name="book_now">Book Now</string>
    <string name="rs_2000">Rs 2000</string>
    <string name="drop_time_amp_date"><![CDATA[Drop time & date]]></string>
    <string name="calendar">calendar</string>
    <string name="pick_time_amp_date"><![CDATA[Pick time & date]]></string>
    <string name="start_date_amp_time"><![CDATA[Start date & time]]></string>
    <string name="date_time_placeholder">03-01-2022 12:00 AM</string>
    <string name="name_title">Name</string>
    <string name="daniyal_abid">Daniyal Abid</string>
    <string name="phone">Phone</string>
    <string name="car_booking">Car Booking</string>
    <string name="your_trip">Your Trip</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="settings">Settings</string>
    <string name="john_doe">John Doe</string>
    <string name="google_maps_key">AIzaSyBgwhe1x1JsZIjgUeup5CRu5edWyJZoiak</string>
    <string name="my_requests">My Requests</string>
    <string name="back">Back</string>
    <string name="customer_service">Customer Service</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit_now">Submit Now</string>
    <string name="create_request">create request</string>
    <string name="dummy_address">Flat 6 block 18 g 11 3 Islamabad</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="share_the_love_by_inviting_your_friends_and_family">Share the love by inviting Your friends and family</string>
    <string name="share_now">Share Now</string>
    <string name="menu">Menu</string>
    <string name="_9_00">9:00</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy.</string>
    <string name="continue_text">Continue</string>
    <string name="play_music_read_news">Play music, read news...</string>
    <string name="have_a_nice_trip">Have a nice trip</string>
    <string name="searching_driver">Searching For Drivers</string>
    <string name="estimated_fair">Estimated fair</string>
    <string name="thank_you_for_booking_with_apnigari_we_are_searching_for_a_driver_now">Thank you for booking with ApniGari we are searching for a driver now.</string>
</resources>