<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/noto_bold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@+id/carDetailsTV"
            app:layout_constraintStart_toStartOf="@+id/carDetailsTV" />

        <TextView
            android:id="@+id/amountTV"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/noto_bold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/rs_placeholder"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@+id/carDetailsTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timeTV" />

        <TextView
            android:id="@+id/carDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/noto_regular"
            android:maxLines="1"
            android:text="@string/rit_5875_honda_civic"
            android:textColor="@color/textGray"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/noto_regular"
            android:maxLines="1"
            android:text="@string/cash"
            android:textColor="@color/textGray"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/timeTV"
            android:layout_marginEnd="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/noto_regular"
            android:maxLines="1"
            android:gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/time"
            android:textColor="@color/textGray"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/dateTV"
            app:layout_constraintStart_toEndOf="@+id/dateTV"
            app:layout_constraintTop_toTopOf="@id/dateTV" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carDetailsTV">
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/noto_bold"
                android:maxLines="1"
                android:text="@string/pick_up_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/carDetailsTV"
                app:layout_constraintStart_toStartOf="@+id/carDetailsTV" />

            <TextView
                android:id="@+id/pickUpAddressTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/noto_regular"
                android:text="@string/dummy_address"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/firstDropOffTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/noto_bold"
                android:maxLines="1"
                android:text="@string/first_drop_off_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/carDetailsTV"
                app:layout_constraintStart_toStartOf="@+id/carDetailsTV" />

            <TextView
                android:id="@+id/firstDropOffAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/noto_regular"
                android:text="@string/dummy_address"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/noto_bold"
                android:maxLines="1"
                android:text="@string/destination_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/carDetailsTV"
                app:layout_constraintStart_toStartOf="@+id/carDetailsTV" />

            <TextView
                android:id="@+id/destinationAddressTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/noto_regular"
                android:text="@string/dummy_address"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />


           </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>