<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_80sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/carIV"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_margin="@dimen/_10sdp"
        android:contentDescription="@string/car_image"
        android:src="@drawable/car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carNameTV"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:text="@string/rapid_go"
        android:fontFamily="@font/noto_bold"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@+id/priceTV"
        app:layout_constraintEnd_toStartOf="@+id/priceTV"
        app:layout_constraintStart_toEndOf="@+id/carIV"
        app:layout_constraintTop_toTopOf="@+id/priceTV" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:text="@string/dummy_amount"
        android:fontFamily="@font/noto_bold"
        android:textSize="@dimen/_13ssp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerGray1"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>