<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_130sdp"
    android:padding="@dimen/_15sdp"
    android:visibility="gone"
    android:background="@drawable/curved_gray_2x">

    <TextView
        android:id="@+id/nameTV1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/noto_black"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/searching_driver"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_bold"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/thank_you_for_booking_with_apnigari_we_are_searching_for_a_driver_now"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTV1" />


    <TextView
        android:id="@+id/cancelRideTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/noto_medium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/cancel_ride"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>